style: fix overflow

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -128,6 +128,7 @@ a
 
 .post-view
   margin 0 20px 50px
+  overflow-x hidden
   a[href]
     position relative
     &:hover
